name:                snaplet-auth-example
version:             0.0.0
Cabal-Version:       >= 1.2
synopsis:            Auth snaplet sample code.
description:         Sample code to demonstrate the Auth snaplet.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

executable snaplet-auth-example
  main-is:             snaplet-auth-example.hs
  build-depends:       base == 4.*,
                       blaze-html,
                       bytestring == 0.9.*,
                       snap == 0.7.*,
                       snap-blaze,
                       text == 0.11.*
  ghc-options:         -Wall
